# visual.obsolete

./: .cdtproject  .cproject  .cvsignore  .project  Doxyfile  HACKING.txt  INSTALL.txt  MAC-OSX.txt  MSWINDOWS.txt  MakeVPython.iss  MakeVPython.iss.in  MakeVPython2.6.iss  MakeVPython2.7.iss  MakeVPython2.iss  Makefile  Makefile.am  Makefile.core  Makefile.gtk2  Makefile.tests  NEWS.txt  README  SConstruct  STATUS.txt  acinclude.m4  autogen.sh  compilevisual.py  configure.ac  cvsignore  mkdist_osx.sh  run  vpython_basic_gtkmm.prj  vpython_basic_gtkmm.pws  vpython_core2.prj  vpython_core2.pws
VCBuild/: .cvsignore  BoostDefines.hpp  VCBuild.txt  boost_python.vcproj  boost_thread.vcproj  boost_thread_cvs.vcproj  cvisual.sln  cvisual.vcproj  cvisual3.vcproj  cvisual_boost_cvs.sln  libsigc++2.vcproj
data/: land_ocean_ice_cloud_2048.tif
dependencies/: .cvsignore  Readme.txt
docs/: Makefile.am  index.html
docs/visual/: VisualIntro.css  VisualIntro.html  VisualRef.css  arrow.html  box.html  color.html  cone.html  controls.html  convex.html  curve.html  cylinder.html  defaults.html  delete.html  display.html  ellipsoid.html  extrusion.html  extrusion_overview.py  faces.html  factorial.html  files.html  float.html  frame.html  graph.html  helix.html  index.html  keyboard.html  label.html  license.txt  lights.html  materials.html  mouse.html  mouse_click.html  mouse_drag.html  new_features.html  new_in_visual_4.html  options.html  paths.html  points.html  primitives.html  pyramid.html  (+8 more)
docs/visual/Templates/: template.dwt
examples/: Makefile.am  Tk-Visual.py  bounce2.py  boxlighttest.py  colorsliders.py  conch.py  controlstest.py  convex.py  crossproduct.py  crystal.py  differential_gear.py  dipole.py  doublependulum.py  drape.py  electric_motor.py  extrusion_overview.py  faces_cone.py  faces_heightfield.py  flower128.btx  flower128.vpt  gas.py  glinfo.py  graphtest.py  gyro.py  gyro2.py  hanoi.py  labels.py  lathe.py  lorenz.py  mandelbrot.py  material_test.py  orbit.py  planar.py  randombox.py  stars.py  stonehenge.py  temp_points.py  text3D.py  textext.py  texttest.py  (+9 more)
include/: arrow.hpp  axial.hpp  box.hpp  cone.hpp  convex.hpp  curve.hpp  cylinder.hpp  display_kernel.hpp  ellipsoid.hpp  faces.hpp  frame.hpp  label.hpp  material.hpp  mouse_manager.hpp  mouseobject.hpp  num_util.h  pmap_sphere.hpp  primitive.hpp  pyramid.hpp  rectangular.hpp  render_core.hpp  renderable.hpp  ring.hpp  simple_displayobject.hpp  sphere.hpp  text.hpp  vpython-config.h  wrap_gl.hpp
include/GL/: glext.h
include/gtk1/: file_texture.hpp  render_surface.hpp
include/gtk2/: display.hpp  file_texture.hpp  font.hpp  font_renderer.hpp  render_surface.hpp  text.hpp
include/mac/: display.hpp  font_renderer.hpp  glcontext.hpp
include/python/: arrayprim.hpp  convex.hpp  curve.hpp  extrusion.hpp  faces.hpp  gil.hpp  num_util.hpp  num_util_impl.hpp  numeric_texture.hpp  points.hpp  scalar_array.hpp  vector_array.hpp
include/util/: atomic_queue.hpp  bsp_tree.hpp  checksum.hpp  clipping_plane.hpp  config.hpp  displaylist.hpp  errors.hpp  extent.hpp  gl_extensions.hpp  gl_free.hpp  icososphere.hpp  lighting.hpp  quadric.hpp  render_manager.hpp  rgba.hpp  shader_program.hpp  sorted_model.hpp  texture.hpp  thread.hpp  timer.hpp  tmatrix.hpp  vector.hpp
include/win32/: display.hpp  font.hpp  font_renderer.hpp  render_surface.hpp  text.hpp  win_glext.hpp
lib/: .cvsignore
src/: Makefile.in
src/core/: arrow.cpp  axial.cpp  box.cpp  cone.cpp  convex.cpp  curve.cpp  cylinder.cpp  display_kernel.cpp  ellipsoid.cpp  faces.cpp  frame.cpp  label.cpp  material.cpp  mouse_manager.cpp  mouseobject.cpp  pmap_sphere.cpp  primitive.cpp  pyramid.cpp  rectangular.cpp  render_core.cpp  renderable.cpp  ring.cpp  simple_displayobject.cpp  sphere.cpp  text.cpp
src/core/util/: atomic_queue.cpp  checksum.cpp  clipping_plane.cpp  displaylist.cpp  errors.cpp  extent.cpp  gl_extensions.cpp  gl_free.cpp  icososphere.cpp  lighting.cpp  quadric.cpp  random_device.cpp  render_manager.cpp  rgba.cpp  shader_program.cpp  texture.cpp  timer.cpp  tmatrix.cpp  vector.cpp
src/gtk1/: gtk1_file_texture.cpp  gtk1_render_surface.cpp
src/gtk2/: display.cpp  file_texture.cpp  font.cpp  font_renderer.cpp  main.cpp  makefile  random_device.cpp  rate.cpp  render_surface.cpp  site-packages.pth  text.cpp  timer.cpp
src/mac/: mac_display.cpp  mac_font_renderer.cpp  mac_random_device.cpp  makefile
src/mac/PackageMaker/: Visual4.0beta_welcome.rtf  Visual5_welcome.rtf  packaging.txt
src/mac/PackageMaker/VPython-Python2.7.pmdoc/: 01visual-contents.xml  01visual.xml  02vidle-contents.xml  02vidle.xml  03vpython-contents.xml  03vpython.xml  04numpy-contents.xml  04numpy.xml  05numpy-contents.xml  05numpy.xml  06ttfquery-contents.xml  06ttfquery.xml  07fonttools-contents.xml  07fonttools.xml  08polygon-contents.xml  08polygon.xml  09polygon-contents.xml  09polygon.xml  10fonttools-contents.xml  10fonttools.xml  11fonttools-contents.xml  11fonttools.xml  (+5 more)
src/python/: .cvsignore  arrayprim.cpp  convex.cpp  curve.cpp  cvisualmodule.cpp  extrusion.cpp  faces.cpp  num_util.cpp  num_util_impl_numarray.cpp  num_util_impl_numeric.cpp  numeric_texture.cpp  points.cpp  scalar_array.cpp  vector_array.cpp  wrap_arrayobjects.cpp  wrap_display_kernel.cpp  wrap_primitive.cpp  wrap_rgba.cpp  wrap_ustring.cpp  wrap_vector.cpp
src/test/: arrow_scaling_test.cpp  arrow_transparent_test.cpp  bounce_test.cpp  box_test.cpp  cone_test.cpp  conference_demo.cpp  convex_test.cpp  curve_test.cpp  cylinder_test.cpp  ellipsoid_test.cpp  gtk_style_test.cpp  label_test.cpp  matrix_inverse_bench.cpp  model_zsort_bench.cpp  object_zsort_bench.cpp  psphere_texture_test.cpp  pyramid_test.cpp  ring_test.cpp  selection_test.cpp  sincos_matrix_bench.cpp  sleep_test.cpp  sphere_lod_test.cpp  sphere_texture_test.cpp  sphere_transparent_test.cpp  texture_sharing_test.cpp
src/win32/: font.cpp  font_renderer.cpp  random_device.cpp  render_surface.cpp  timer.cpp  windisplay.cpp  winfont.cpp  winmain.cpp  winrandom_device.cpp  winrender_surface.cpp  wintext.cpp  wintimer.cpp
(+37 files in other folders)
